<?xml version="1.0"?>
<package format="3">
  <name>mock_atm</name>
  <version>0.0.0</version>
  <description>Package containing mock ATM to work side by side (higher level) with payload controller</description>
  <maintainer email="test@hopetechinik.com">Test</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>atm_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>atm_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pep8</test_depend>
  <test_depend>ament_pyflakes</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
